--- a/src/app/views/features/order/order.component.html
+++ b/src/app/views/features/order/order.component.html
@@ -31,10 +31,9 @@
             <th pSortableColumn="status">狀態
               <p-sortIcon field="status"></p-sortIcon>
             </th>
-            <th>號碼</th>
-            <!--            <th pSortableColumn="number">號碼-->
-            <!--              <p-sortIcon field="number"></p-sortIcon>-->
-            <!--            </th>-->
+            <th pSortableColumn="code">號碼
+            <p-sortIcon field="code"></p-sortIcon>
+            </th>
             <th pSortableColumn="account_id">帳戶
               <p-sortIcon field="account_id"></p-sortIcon>
             </th>
@@ -42,10 +41,9 @@
             <th pSortableColumn="start_date">訂單開始日期
               <p-sortIcon field="start_date"></p-sortIcon>
             </th>
-            <th>契約號碼</th>
-            <!--            <th pSortableColumn="contract_number">契約號碼-->
-            <!--              <p-sortIcon field="contract_number"></p-sortIcon>-->
-            <!--            </th>-->
+            <th pSortableColumn="contract_code">契約號碼
+            <p-sortIcon field="contract_code"></p-sortIcon>
+            </th>
             <th></th>
           </tr>
         </ng-template>
