--- a/src/app/views/features/quote/quote.component.html
+++ b/src/app/views/features/quote/quote.component.html
@@ -155,7 +155,7 @@
         <div class="field">
           <label>小計</label>
           <br>
-          <label class="mt-2 ml-2">{{quote_form.controls['subtotal'].value}}</label>
+          <label class="mt-2 ml-2">{{quote_form.controls['sub_total'].value}}</label>
           <!--<p-inputNumber  formControlName="subtotal" mode="currency" currency="USD" locale="en-US" [minFractionDigits]="2"> </p-inputNumber>-->
         </div>
       </div>
@@ -178,8 +178,8 @@
         <div class="field">
           <label>運輸處理</label>
           <br>
-          <p-inputNumber class="w-full" formControlName="shipping_and_handling" suffix="%"
-                         [minFractionDigits]="2" [min]="0" [max]="100"></p-inputNumber>
+          <p-inputNumber class="w-full" formControlName="shipping_and_handling" mode="currency" currency="TWD" locale="en-US"
+                         [minFractionDigits]="2" [min]="0"></p-inputNumber>
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
@@ -187,7 +187,7 @@
           <label>總計</label>
           <br>
           <!-- <input type="number" class="form-control" formControlName="total_price" [value]="getNumber(quote_form.controls['total_price'].value)" /> -->
-          <label class="mt-2 ml-2">{{quote_form.controls['total_price'].value}}</label>
+          <label class="mt-2 ml-2">{{quote_form.controls['grand_total'].value}}</label>
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
