--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -142,7 +142,9 @@
       </div>
       <ng-container *ngIf="dialogHeader !== '編輯線索'">
         <div class="col-12 md:col-6 lg:col-6 flex justify-content-start mt-4">
-          <p-button (click)="type.toggle($event)" icon="pi pi-plus" pTooltip="新增帳戶" tooltipPosition="top"
+          <!--<p-button (click)="type.toggle($event)" icon="pi pi-plus" pTooltip="新增帳戶" tooltipPosition="top"-->
+          <!--styleClass="p-button-raised p-button-text"></p-button>-->
+          <p-button (click)="addAccDialog()" icon="pi pi-plus" pTooltip="新增帳戶" tooltipPosition="top"
                     styleClass="p-button-raised p-button-text"></p-button>
         </div>
       </ng-container>
@@ -196,7 +198,8 @@
       <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
     </div>
   </p-dialog>
-  <p-menu #type [model]="account_type" [popup]="true"></p-menu>
+  <!--帳戶類別 menu-->
+  <!--<p-menu #type [model]="account_type" [popup]="true"></p-menu>-->
 </form>
 <form [formGroup]="account_form">
   <p-dialog [(visible)]="addAcount" header="新增帳戶" [modal]="true">
@@ -218,8 +221,10 @@
       <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>帳戶類別</label>
-          <br>
-          <label>{{(account_form.controls['type'].value)}}</label>
+          <!--          <br>-->
+          <!--          <label>{{(account_form.controls['type'].value)}}</label>-->
+          <p-multiSelect [options]="type" formControlName="type" optionLabel="name"
+                         display="chip"></p-multiSelect>
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
