--- a/src/app/views/features/contract/view-contract/view-contract.component.html
+++ b/src/app/views/features/contract/view-contract/view-contract.component.html
@@ -26,7 +26,7 @@
             </div>
             <div class="col-12 flex justify-content-center">
               <label>契約開始日期: </label>
-              <label>{{contract_form.controls['start_date'].value}}</label>
+              <label>{{formatDate2(contract_form.controls['start_date'].value)}}</label>
             </div>
             <div class="col-12 flex justify-content-center">
               <label>契約結束日期: </label>
