feat: 契約歷程記錄 頁碼

--- a/src/app/views/features/contract/view-contract/view-contract.component.html
+++ b/src/app/views/features/contract/view-contract/view-contract.component.html
@@ -26,7 +26,7 @@
             </div>
             <div class="col-12 flex justify-content-center">
               <label>契約開始日期: </label>
-              <label>{{formatDate2(contract_form.controls['start_date'].value)}}</label>
+              <label>{{contract_form.controls['start_date'].value}}</label>
             </div>
             <div class="col-12 flex justify-content-center">
               <label>契約結束日期: </label>
@@ -128,7 +128,9 @@
         <form [formGroup]="contract_form">
           <p-tabView>
             <p-tabPanel header="相關">
-              <p-table [rowsPerPageOptions]="[10, 15]" [lazy]="true" [value]="GetContractHistoricalRecords">
+              <p-table [rowsPerPageOptions]="[5, 10, 15]" (onLazyLoad)="loadTable($event)" [value]="GetContractHistoricalRecords"
+                       [totalRecords]="totalHistorical" [showCurrentPageReport]="true" #dt1
+                       [paginator]="true" [rows]="5" currentPageReportTemplate="共 {totalRecords} 筆">
                 <ng-template pTemplate="caption">
                   <div class="flex justify-content-between">
                     <div class="justify-content-start mt-2">
@@ -152,7 +154,7 @@
                 </ng-template>
               </p-table>
               <div class="mt-3">
-                <p-table [rowsPerPageOptions]="[10, 15]" [value]="GetAllOrder">
+                <p-table [rowsPerPageOptions]="[10, 15]" [value]="GetAllOrder" [totalRecords]="totalRecords">
                   <ng-template pTemplate="caption">
                     <div class="flex justify-content-between">
                       <div class="justify-content-start mt-2">
