feat: 帳戶 & 聯絡人 詳細頁面

--- a/src/app/views/features/account/account.component.html
+++ b/src/app/views/features/account/account.component.html
@@ -51,9 +51,9 @@
                           styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
                 <p-button (click)="showDialog('edit',account)" icon="pi pi-pencil" pTooltip="編輯" tooltipPosition="top"
                           styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
-                <p-button (click)="deleteAccount(account.account_id)" icon="pi pi-trash" pTooltip="刪除"
-                          tooltipPosition="top"
-                          styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+<!--                <p-button (click)="deleteAccount(account.account_id)" icon="pi pi-trash" pTooltip="刪除"-->
+<!--                          tooltipPosition="top"-->
+<!--                          styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>-->
               </div>
             </td>
           </tr>
