--- a/src/app/views/features/order/view-order/view-order.component.html
+++ b/src/app/views/features/order/view-order/view-order.component.html
@@ -77,7 +77,7 @@
                         <p-button icon="pi pi-plus" pTooltip="新增商品" (click)="addProduct()" tooltipPosition="top"
                                   styleClass="p-button-text"></p-button>
                       </ng-container>
-                      <p-button icon="pi pi-pencil" pTooltip="編輯所有訂單商品" (click)="editProduct()"
+                      <p-button icon="pi pi-pencil" pTooltip="編輯所有訂單商品"
                                 tooltipPosition="top"
                                 styleClass="p-button-text"></p-button>
                     </div>
@@ -242,7 +242,7 @@
 
 <!-- 新增商品dialog -->
 <p-dialog [(visible)]="add" header=新增商品 [modal]="true">
-  <p-table [value]="GetAllProduct">
+  <p-table [value]="GetAllProduct" [(selection)]="selectedProducts">
     <ng-template pTemplate="header">
       <tr>
         <th style="width: 4rem">
@@ -278,21 +278,22 @@
     </ng-template>
     <ng-template pTemplate="summary">
       <div class="flex justify-content-end">
-        <p-button label="取消" (click)="add=false" styleClass="p-button-secondary"></p-button>
-        <p-button label="下一步" (click)="edit=true;add=false" styleClass="p-button-info ml-1"></p-button>
+        <p *ngIf="showErrorMessage" class="required-star">選擇的項目必須至少1種</p>
+        <p-button label="取消"  (click)="showAlertCancel()" styleClass="p-button-secondary ml-3"></p-button>
+        <p-button label="下一步" (click)="editSelectedProduct()" styleClass="p-button-info ml-1"></p-button>
       </div>
     </ng-template>
   </p-table>
 </p-dialog>
 
-<!-- 編輯產品dialog -->
+<!-- 編輯所有產品dialog -->
 <form [formGroup]="edit_product_form">
-  <p-dialog [(visible)]="edit" header=編輯所有商品 [modal]="true">
-    <p-table [value]="order_product">
+  <p-dialog *ngIf="editselectedProducts" [(visible)]="editselectedProducts" header=編輯選擇訂單商品 [modal]="true">
+    <p-table [value]="selectedProducts">
       <ng-template pTemplate="header">
         <tr>
           <th>名稱</th>
-          <th>價目表價格</th>
+          <th>商品價格</th>
           <th>報價價格</th>
           <th><span class="required-star">*</span>數量</th>
           <th><span class="required-star">*</span>訂單價格</th>
@@ -303,16 +304,30 @@
           <td>{{ product.name }}</td>
           <td>{{ product.price }}</td>
           <td>{{ product.quote_price }}</td>
-          <td><p-inputNumber inputId="integeronly" [min]="0" formControlName="quantity"
-                             [ngClass]="{'ng-dirty':edit_product_form.controls['quantity'].hasError('required') && edit_product_form.controls['quantity'].touched}"></p-inputNumber></td>
-          <td><p-inputNumber inputId="integeronly" [min]="0" formControlName="unit_price"
-                             [ngClass]="{'ng-dirty':edit_product_form.controls['unit_price'].hasError('required') && edit_product_form.controls['unit_price'].touched}"></p-inputNumber></td>
+          <td>
+            <p-inputNumber inputId="integeronly" [min]="0" [formControlName]="'quantity_' + product.product_id"
+                           [ngClass]="{'ng-dirty': edit_product_form.controls['quantity_' +  product.product_id]?.hasError('required') && edit_product_form.controls['quantity_' +  product.product_id]?.touched}">
+            </p-inputNumber>
+          </td>
+          <td>
+            <p-inputNumber inputId="integeronly" mode="currency" currency="TWD" locale="en-tw"
+                           [min]="0" [formControlName]="'unit_price_' + product.product_id"
+                           [ngClass]="{'ng-dirty': edit_product_form.controls['unit_price_' + product.product_id]?.hasError('required') && edit_product_form.controls['unit_price_' +  product.product_id]?.touched}">
+            </p-inputNumber>
+          </td>
+          <td>
+            <div class="flex justify-content-end">
+              <p-button icon="pi pi-trash" styleClass="p-button-rounded p-button-secondary p-button-text"
+                        pTooltip="刪除"
+                        tooltipPosition="top"></p-button>
+            </div>
+          </td>
         </tr>
       </ng-template>
       <ng-template pTemplate="summary">
         <div class="flex justify-content-end">
-          <p-button label="取消" (click)="edit=false" styleClass="p-button-secondary"></p-button>
-          <p-button label="儲存" (click)="edit=false" styleClass="p-button-info ml-1"></p-button>
+          <p-button label="取消" (click)="editselectedProducts=false" styleClass="p-button-secondary"></p-button>
+          <p-button label="儲存" (click)="editselectedProducts=false" styleClass="p-button-info ml-1"></p-button>
         </div>
       </ng-template>
     </p-table>
