--- a/src/app/views/features/quote/quote.component.html
+++ b/src/app/views/features/quote/quote.component.html
@@ -115,6 +115,13 @@
                       optionLabel="name" (onChange)="onStatusChange($event)" [(ngModel)]="selectedStatus"></p-dropdown>
         </div>
       </div>
+      <div class="col-12 md:col-12 lg:col-12">
+        <div class="field">
+          <label><span class="required-star">*</span>名稱</label>
+          <input pInputText formControlName="name"
+                 [ngClass]="{'ng-dirty':quote_form.controls['name'].hasError('required') && quote_form.controls['name'].touched}">
+        </div>
+      </div>
       <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label><span class="required-star">*</span>商機</label>
@@ -129,13 +136,6 @@
           <label>同步到商機</label>
           <br>
           <p-checkbox formControlName="is_syncing" value="is_syncing" [binary]="true" (click)="showAlertCormfirm()"></p-checkbox>
-        </div>
-      </div>
-      <div class="col-12 md:col-12 lg:col-12">
-        <div class="field">
-          <label><span class="required-star">*</span>名稱</label>
-          <input pInputText formControlName="name"
-                 [ngClass]="{'ng-dirty':quote_form.controls['name'].hasError('required') && quote_form.controls['name'].touched}">
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
@@ -163,7 +163,7 @@
       </div>
       <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
-          <label>折扣(四捨五入後)</label>
+          <label>折扣(四捨五入)</label>
           <br>
           <label class="mt-2 ml-2">NT$ {{quote_form.controls['discount'].value}}</label>
         </div>
@@ -208,14 +208,14 @@
       </div>
     </div>
     <div class="flex justify-content-end">
+      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
       <ng-container *ngIf="!showedit">
-        <p-button label="新增" (click)="postQuoteRequest()" styleClass="p-button-raised"></p-button>
+        <p-button label="新增" (click)="postQuoteRequest()" styleClass="p-button-info"></p-button>
       </ng-container>
       <ng-container *ngIf="showedit">
         <p-button label="儲存" (click)="patchQuoteRequest(q_id)"
-                  styleClass="p-button-raised"></p-button>
+                  styleClass="p-button-info"></p-button>
       </ng-container>
-      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
     </div>
   </p-dialog>
 </form>
