--- a/src/app/views/features/quote/view-quote/view-quote.component.html
+++ b/src/app/views/features/quote/view-quote/view-quote.component.html
@@ -6,13 +6,9 @@
           <h3>{{name}}</h3>
           <p-divider></p-divider>
           <span class="p-buttonset flex justify-content-center">
-            <p-button pTooltip="編輯" tooltipPosition="top" icon="pi pi-pencil"
+            <p-button pTooltip="刪除" tooltipPosition="top" icon="pi pi-trash" (click)="deleteQuoteRequest(this.q_id)"
                       styleClass="p-button-rounded p-button-secondary p-button-outlined border-round-left-lg"></p-button>
-            <p-button pTooltip="刪除" tooltipPosition="top" icon="pi pi-trash"
-                      styleClass="p-button-rounded p-button-secondary p-button-outlined"></p-button>
             <p-button pTooltip="複製" tooltipPosition="top" icon="pi pi-copy"
-                      styleClass="p-button-rounded p-button-secondary p-button-outlined"></p-button>
-            <p-button pTooltip="轉換" tooltipPosition="top" icon="pi pi-sync"
                       styleClass="p-button-rounded p-button-secondary p-button-outlined border-round-right-lg"></p-button>
           </span>
           <div class="grid mt-2">
@@ -29,8 +25,10 @@
               <label>{{GetOneIsSyncing}}</label>
             </div>
             <div class="col-12 flex justify-content-center">
-              <label>總計: </label>
-              <label>{{quote_form.controls['grand_total'].value}}</label>
+              <label>小計: NT$ {{quote_form.controls['sub_total'].value}}</label>
+            </div>
+            <div class="col-12 flex justify-content-center">
+              <label class="font-bold">總計: NT$ {{quote_form.controls['grand_total'].value}}</label>
             </div>
           </div>
         </form>
@@ -107,7 +105,7 @@
       <p-card>
         <form [formGroup]="quote_form">
           <p-tabView>
-            <p-tabPanel header="相關">
+            <p-tabPanel header="詳細">
               <p-table [rowsPerPageOptions]="[10, 15]" [value]="GetAllQuoteProduct" [lazy]="true"
                        [loading]="QuoteProductloading">
                 <ng-template pTemplate="caption">
@@ -156,7 +154,7 @@
                 </ng-template>
               </p-table>
             </p-tabPanel>
-            <p-tabPanel header="詳細資料">
+            <p-tabPanel header="報價單">
               <div class="grid">
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
@@ -166,6 +164,14 @@
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
+                  <div class="field">
+                    <label>狀態</label>
+                    <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body" [options]="status"
+                                formControlName="status" optionLabel="name"
+                                (onChange)="onStatusChange($event)"></p-dropdown>
+                  </div>
+                </div>
+                <div class="col-12 md:col-12 lg:col-12">
                   <div class="field">
                     <label><span class="required-star">*</span>名稱</label>
                     <input pInputText formControlName="name"
@@ -184,17 +190,9 @@
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
-                    <label>狀態</label>
-                    <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body" [options]="status"
-                                formControlName="status" optionLabel="name"
-                                (onChange)="onStatusChange($event)"></p-dropdown>
-                  </div>
-                </div>
-                <div class="col-12 md:col-6 lg:col-6">
-                  <div class="field">
                     <label>同步到商機</label>
                     <br>
-                    <p-checkbox formControlName="is_syncing" value="is_syncing" [binary]="true"></p-checkbox>
+                    <p-checkbox formControlName="is_syncing" value="is_syncing" [binary]="true" (click)="showAlertCormfirm()"></p-checkbox>
                   </div>
                 </div>
                 <div class="col-12 md:col-12 lg:col-12">
@@ -214,7 +212,7 @@
                   <div class="field">
                     <label>小計</label>
                     <br>
-                    <label class="mt-2 ml-2">{{quote_form.controls['sub_total'].value}}</label>
+                    <label class="mt-2 ml-2">NT$ {{quote_form.controls['sub_total'].value}}</label>
                     <!--<p-inputNumber  formControlName="subtotal" mode="currency" currency="USD" locale="en-US" [minFractionDigits]="2"> </p-inputNumber>-->
                   </div>
                 </div>
@@ -223,22 +221,22 @@
                     <label>稅額</label>
                     <br>
                     <p-inputNumber class="w-full" formControlName="tax" mode="currency" currency="TWD" locale="en-US"
-                                   [minFractionDigits]="2" [min]="0"></p-inputNumber>
+                                   [minFractionDigits]="0" [min]="0"></p-inputNumber>
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
-                    <label>折扣</label>
+                    <label>折扣(四捨五入)</label>
                     <br>
-                    <label class="mt-2 ml-2">{{quote_form.controls['discount'].value}}</label>
+                    <label class="mt-2 ml-2">{{quote_form.controls['discount'].value}} %</label>
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
-                    <label>運輸處理</label>
+                    <label>運費及其他費用</label>
                     <br>
                     <p-inputNumber class="w-full" formControlName="shipping_and_handling" mode="currency" currency="TWD" locale="en-US"
-                                   [minFractionDigits]="2" [min]="0"></p-inputNumber>
+                                   [minFractionDigits]="0" [min]="0"></p-inputNumber>
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
@@ -246,7 +244,7 @@
                     <label>總計</label>
                     <br>
                     <!-- <input type="number" class="form-control" formControlName="total_price" [value]="getNumber(quote_form.controls['total_price'].value)" /> -->
-                    <label class="mt-2 ml-2">{{quote_form.controls['grand_total'].value}}</label>
+                    <label class="mt-2 ml-2 font-bold">NT$ {{quote_form.controls['grand_total'].value}}</label>
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
@@ -267,9 +265,9 @@
                 </div>
               </div>
               <div class="flex justify-content-end">
+                <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
                 <p-button label="儲存" (click)="patchQuoteRequest(q_id)"
-                          styleClass="p-button-outlined p-button-info"></p-button>
-                <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
+                          styleClass="p-button-info"></p-button>
               </div>
             </p-tabPanel>
           </p-tabView>
@@ -328,14 +326,14 @@
       <div class="flex justify-content-end">
         <p *ngIf="showErrorMessage" class="required-star">選擇的項目必須至少1種</p>
         <p-button label="取消"  (click)="showAlertCancel()" styleClass="p-button-secondary ml-3"></p-button>
-        <p-button label="儲存" (click)="editSelectedProduct()" styleClass="p-button-info ml-1"></p-button>
+        <p-button label="下一步" (click)="editSelectedProduct()" styleClass="p-button-info ml-1"></p-button>
       </div>
     </ng-template>
   </p-table>
 </p-dialog>
 
 
-<!-- 編輯所有報價產品dialog -->
+<!-- 編輯選擇報價產品dialog -->
 <form [formGroup]="quote_product_form">
   <p-dialog *ngIf="editselectedProducts" [(visible)]="editselectedProducts" header=編輯選擇報價商品 [modal]="true">
     <p-table [value]="selectedProducts">
@@ -355,7 +353,7 @@
           <td>{{ product.price }}</td>
           <td>
             <p-inputNumber inputId="integeronly" mode="currency" currency="TWD" locale="en-tw"
-                           [min]="0" [formControlName]="'unit_price_' + product.product_id"
+                           [min]="0" [minFractionDigits]="0" [formControlName]="'unit_price_' + product.product_id"
                            [ngClass]="{'ng-dirty': quote_product_form.controls['unit_price_' + product.product_id]?.hasError('required') && quote_product_form.controls['unit_price_' +  product.product_id]?.touched}">
             </p-inputNumber>
           </td>
@@ -369,13 +367,6 @@
                            [formControlName]="'discount_' + product.product_id"
                            [ngClass]="{'ng-dirty': quote_product_form.controls['discount_' +  product.product_id]?.hasError('required') && quote_product_form.controls['discount_' +  product.product_id]?.touched}">
             </p-inputNumber>
-          </td>
-          <td>
-            <div class="flex justify-content-end">
-              <p-button icon="pi pi-trash" styleClass="p-button-rounded p-button-secondary p-button-text"
-                        pTooltip="刪除"
-                        tooltipPosition="top"></p-button>
-            </div>
           </td>
         </tr>
       </ng-template>
@@ -415,7 +406,7 @@
           <td>{{ product.standard_price }}</td>
           <td>
             <p-inputNumber inputId="integeronly" mode="currency" currency="TWD" locale="en-tw"
-                           [min]="0" [formControlName]="'unit_price_' + product.quote_product_id"
+                           [min]="0" [minFractionDigits]="0" [formControlName]="'unit_price_' + product.quote_product_id"
                            [ngClass]="{'ng-dirty': quote_product_form.controls['unit_price_' + product.quote_product_id]?.hasError('required') && quote_product_form.controls['unit_price_' +  product.quote_product_id]?.touched}">
             </p-inputNumber>
           </td>
@@ -429,13 +420,6 @@
                            [formControlName]="'discount_' + product.quote_product_id"
                            [ngClass]="{'ng-dirty': quote_product_form.controls['discount_' +  product.quote_product_id]?.hasError('required') && quote_product_form.controls['discount_' +  product.quote_product_id]?.touched}">
             </p-inputNumber>
-          </td>
-          <td>
-            <div class="flex justify-content-end">
-              <p-button icon="pi pi-trash" styleClass="p-button-rounded p-button-secondary p-button-text"
-                        pTooltip="刪除"
-                        tooltipPosition="top" (click)="deleteQuoteProductRequest(product.quote_product_id)"></p-button>
-            </div>
           </td>
         </tr>
       </ng-template>
@@ -451,7 +435,7 @@
   </p-dialog>
 </form>
 
-
+<!-- 編輯table單一報價產品dialog -->
 <form [formGroup]="quote_product_form">
   <p-dialog [(visible)]="editOneQuoteProduct" header=編輯報價商品 [modal]="true">
     <div class="grid">
@@ -473,7 +457,7 @@
         <div class="field">
           <label>商品價格</label>
           <br>
-          <label class="mt-2 ml-2 disable">{{(quote_product_form.controls['standard_price'].value)}}</label>
+          <label class="mt-2 ml-2 disable">NT$ {{(quote_product_form.controls['standard_price'].value)}}</label>
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
@@ -481,7 +465,7 @@
           <label>銷售價格</label>
           <br>
           <p-inputNumber inputId="integeronly" mode="currency" currency="TWD" locale="en-tw" class="w-full"
-                         [min]="0" [formControlName]="'unit_price'"
+                         [min]="0" [formControlName]="'unit_price'" [minFractionDigits]="0"
                          [ngClass]="{'ng-dirty':quote_product_form.controls['unit_price'].hasError('required') && quote_product_form.controls['unit_price'].touched}">
           </p-inputNumber>
 
@@ -500,15 +484,14 @@
         <div class="field">
           <label>小計</label>
           <br>
-          <label class="mt-2 ml-2 disable">{{(quote_product_form.controls['sub_total'].value)}}</label>
+          <label class="mt-2 ml-2 disable">NT$ {{(quote_product_form.controls['sub_total'].value)}}</label>
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>折扣</label>
           <br>
-          <p-inputNumber inputId="integeronly" [min]="0" [max]="100" suffix="%"
-                         [formControlName]="'discount'"  class="w-full"
+          <p-inputNumber inputId="integeronly" [min]="0" [max]="100" suffix="%" [formControlName]="'discount'"  class="w-full"
                          [ngClass]="{'ng-dirty': quote_product_form.controls['discount'].hasError('required') && quote_product_form.controls['discount'].touched}">
           </p-inputNumber>
         </div>
@@ -517,7 +500,7 @@
         <div class="field">
           <label>總價</label>
           <br>
-          <label class="mt-2 ml-2 disable">{{(quote_product_form.controls['total_price'].value)}}</label>
+          <label class="mt-2 ml-2 disable">NT$ {{(quote_product_form.controls['total_price'].value)}}</label>
         </div>
       </div>
       <div class="col-12 md:col-12 lg:col-12">
