--- a/src/app/views/features/contract/contract.component.html
+++ b/src/app/views/features/contract/contract.component.html
@@ -173,15 +173,15 @@
       </div>
     </div>
     <div class="flex justify-content-end">
+      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
       <ng-container *ngIf="!showedit">
-        <p-button label="新增" (click)="postContractRequest()" styleClass="p-button-outlined p-button-info"></p-button>
+        <p-button label="新增" (click)="postContractRequest()" styleClass="p-button-info"></p-button>
       </ng-container>
       <ng-container *ngIf="!disableSaveButton">
         <ng-container *ngIf="showedit">
           <p-button label="儲存" (click)="patchContractRequest(c_id)"
-                    styleClass="p-button-outlined p-button-info"></p-button>
+                    styleClass="p-button-info"></p-button>
         </ng-container>
-        <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
       </ng-container>
     </div>
   </p-dialog>
