--- a/src/app/views/features/contract/view-contract/view-contract.component.html
+++ b/src/app/views/features/contract/view-contract/view-contract.component.html
@@ -270,8 +270,8 @@
               </div>
               <ng-container *ngIf="stage !=='已取消' && stage !=='已過期'">
               <div class="flex justify-content-end">
-                <p-button label="儲存" (click)="patchContractRequest()" styleClass="p-button-outlined p-button-info"></p-button>
-                <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
+                <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
+                <p-button label="儲存" (click)="patchContractRequest()" styleClass="p-button-info"></p-button>
               </div>
               </ng-container>
             </p-tabPanel>
@@ -368,14 +368,14 @@
       </div>
     </div>
     <div class="flex justify-content-end">
+      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
       <ng-container *ngIf="!showedit">
-        <p-button label="新增" (click)="postOrderRequest()" styleClass="p-button-outlined p-button-info"></p-button>
+        <p-button label="新增" (click)="postOrderRequest()" styleClass="p-button-info"></p-button>
       </ng-container>
       <ng-container *ngIf="showedit">
         <p-button label="儲存" (click)="patchOrderRequest()"
-                  styleClass="p-button-outlined p-button-info"></p-button>
+                  styleClass="p-button-info"></p-button>
       </ng-container>
-      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
     </div>
   </p-dialog>
 </form>
