style: view title

--- a/src/app/views/features/lead/view-lead/view-lead.component.html
+++ b/src/app/views/features/lead/view-lead/view-lead.component.html
@@ -85,6 +85,9 @@
     <div>
       <form [formGroup]="lead_form">
         <p-card>
+          <div class="flex justify-content-left ml-3 font-bold">
+            <label>線索詳細頁面</label>
+          </div>
           <p-tabView>
             <p-tabPanel header="詳細資料">
               <!--              <ng-container *ngIf="edit==false">-->
