--- a/src/app/views/features/opportunity/view-opportunity/view-opportunity.component.html
+++ b/src/app/views/features/opportunity/view-opportunity/view-opportunity.component.html
@@ -83,6 +83,9 @@
     <div>
       <form [formGroup]="opportunity_form">
         <p-card>
+          <div class="flex justify-content-left ml-3 font-bold">
+            <label>商機詳細頁面</label>
+          </div>
           <p-tabView>
             <p-tabPanel header="詳細資料">
               <div class="grid">
