--- a/src/app/views/features/contact/view-contact/view-contact.component.html
+++ b/src/app/views/features/contact/view-contact/view-contact.component.html
@@ -32,6 +32,9 @@
   <div class="col-12 md:col-12 lg:col-6">
     <div class="mb-3">
       <p-card>
+        <div class="flex justify-content-left ml-3 font-bold">
+          <label>聯絡人詳細頁面</label>
+        </div>
         <p-tabView>
           <p-tabPanel header="詳細資料">
             <form [formGroup]="contact_form">
